--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -87,6 +87,7 @@ theme:
     - media: "(prefers-color-scheme: dark)"
       primary: grey
       accent: blue
+      scheme: slate
       toggle:
         icon: material/weather-night
         name: Switch to system preference
