--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,9 +6,15 @@ on:
 
 jobs:
   check:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v3
       - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: cachix/cachix-action@v12
+        with:
+          name: appsys
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - run: nix flake check
